--- a/local-defs.tex
+++ b/local-defs.tex
@@ -162,6 +162,7 @@
 % --------------------------------------------------------------------------------------------------
 
 % Generic MCMC commands. 
+\newcommand{\propDens}{q} % Proposal density
 \newcommand{\CovProp}{\mathbf{C}} % Proposal covariance matrix
 \newcommand{\NMCMC}{T_{\text{MCMC}}} % Proposal covariance matrix
 \newcommand{\accProbMH}{\alpha} % Metropolis-Hastings acceptance probability
